# target_offload_snippets

./: .gitignore  README.md  openacc_atomic_incorrect_results.cpp  target_offload_snippets_report.xlsx
eigen_offload_compatibility/: README.md  api.cu  api.h
eigen_offload_compatibility/no_cuda_version/: Intel_Report.md  README.md
eigen_offloading_compatibility/: .gitignore  CMakeLists.txt  README.md  eigen.cpp
eigen_offloading_compatibility/no_cuda_version/: README.md  eigen.cpp
implicit_declare/: README.md  implicit_omp_declare_target.cpp  test.sh
openacc_atomics/: README.md  openacc_atomic_incorrect_results.cpp  test.sh
openacc_shared_lib/example1/: README.md  cuda.cu  directives.cpp  dynamic.cpp  test_nvhpc.sh
openacc_shared_lib/example2/: README.md  minimal_directives.cpp  minimal_main.cpp  test_.sh  test_nvhpc.sh
openacc_shared_lib/example3/: test.cpp
openacc_shared_lib/example4/: README.md  lib.cpp  main.cpp  test_nvhpc.sh
openmp_atomics/: README.md  atomics_openmp_offload_1.cpp  atomics_openmp_offload_2.cpp  test.sh
openmp_breaks_openacc_code/: README.md  test.cpp  test_intel.sh  test_llvm.sh  test_nvhpc.sh
openmp_clause_ordering/: Intel_Report.md  README.md  openmp_target_offload_clause_ordering.cpp  test.sh
openmp_llvm/scenario1/: Intel_Report.md  README.md  main.cpp  test.sh
openmp_llvm/scenario2/: Intel_Report.md  README.md  main.cpp  test.cpp
openmp_offloading_shared_lib/example1/: README.md  test_compute.h  test_intel.sh  test_llvm.sh  test_nvhpc.sh
openmp_offloading_shared_lib/example2/: README.md  (+2 more)
openmp_shared_lib/: test.cpp
(+1 files in other folders)
